--- a/styles/base.css
+++ b/styles/base.css
@@ -1,3 +1,11 @@
 body {
-  background-color: white;
+  width: 480px;
+  margin: 0 auto;
+}
+
+@media only screen and (min-width: 800px){
+  body {
+    width: 960px;
+    margin: 0 auto;
+  }
 }
